# modos-schema

./: .cruft.json  404.html  CONTRIBUTING.md  Makefile  NOTICE  README.md  about.yaml  config.public.mk  config.yaml  index.html  mkdocs.yml  pyproject.toml  pyproject.toml.rej  sitemap.xml
AlignmentSet/: index.html
Array/: index.html
Assay/: index.html
Boolean/: index.html
CellType/: index.html
Curie/: index.html
DataEntity/: index.html
DataFormat/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
Experiment/: index.html
Float/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
MODO/: index.html
MODOCollection/: index.html
MassSpectrometryResults/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
OmicsType/: index.html
Record/: index.html
ReferenceGenome/: index.html
ReferenceSequence/: index.html
Sample/: index.html
Sex/: index.html
SourceMaterial/: index.html
Sparqlpath/: index.html
String/: index.html
Study/: index.html
StudyCollection/: index.html
Table/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
VariantSet/: index.html
about/: index.html
cell_type/: index.html
collector/: index.html
completion_date/: index.html
creation_date/: index.html
data_checksum/: index.html
data_format/: index.html
data_path/: index.html
derived_from/: index.html
description/: index.html
id/: index.html
(+258 files in other folders)
